Resolve merge conflicts

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_API_URL=https://backend-production-95a6.up.railway.app/api
-VITE_SOCKET_URL=https://backend-production-95a6.up.railway.app
+VITE_API_URL=http://localhost:5000/api
+VITE_SOCKET_URL=http://localhost:5000
 
 
 
