--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=http://localhost:5000/api 
 VITE_SOCKET_URL=http://localhost:5000
 
 
 
+# || backend-production-21cb.up.railway.app
